# notification_scheduler

./: .env_sample  .gitignore  README.md  app.py  app1.py  client.html  config.py  endpoints_table.md  models.py  pyproject.toml  routes.py  schema.txt  script.py  utils.py
docs/: Technical.md  schema.txt
instance/: notifications.db
scripts/: db_init.py  dummy_server.py  error_converter.py  errors.py  errors.txt  nonasync_test.py  test_http_async.py  test_http_thread_process.py  test_smtp_async.py
templates/: email.html  index.html
