[tool.poetry]
name = "noti-sched"
version = "0.1.0"
description = "notification scheduler and management"
authors = ["subhamivan <ivan.sarangi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-debugtoolbar = "^0.16.0"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
cryptography = "^43.0.3"
aiosmtplib = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
